  (and sending a new request event) within the router (it used to be
  performed afterwards).

- Adding ``*path_info`` to a route no longer changes the PATH_INFO for
  a request that matches using URL dispatch.  This feature was only
  there to service the ``repoze.bfg.wsgi.wsgiapp2`` decorator and it
  did it wrong; use ``*subpath`` instead now.

Bug Fixes
---------

- The ``bfg_alchemy`` Paster template named "repoze.tm" in its
  pipeline rather than "repoze.tm2", causing the startup to fail.

- Move BBB logic for registering an
  IAuthenticationPolicy/IForbiddenView/INotFoundView based on older
  concepts from the router module's ``make_app`` function into the
  ``repoze.bfg.zcml.zcml_configure`` callable, to service
  compatibility with scripts that use "zope.configuration.xmlconfig"
  (replace with ``repoze.bfg.zml.zcml_configure`` as necessary to get
  BBB logic)

Documentation
-------------

- Add interface docs related to how to create authentication policies
  and authorization policies to the "Security" narrative chapter.

- Added a (fairly sad) "Combining Traversal and URL Dispatch" chapter
  to the narrative documentation.  This explains the usage of
  ``*traverse`` and ``*subpath`` in routes URL patters.

- A "router" chapter explaining the request/response lifecycle at a
  high level was added.

- Replaced all mentions and explanations of a routes "context factory"
  with equivalent explanations of a "root factory" (context factories
  have been disused).

- Updated Routes bfgwiki2 tutorial to reflect the fact that context
  factories are now no longer used.

0.9.1 (2009-06-02)
==================

Features
--------

- Add API named ``repoze.bfg.settings.get_settings`` which retrieves a
  derivation of values passed as the ``options`` value of
  ``repoze.bfg.router.make_app``.  This API should be preferred
  instead of using getUtility(ISettings).  I added a new
  ``repoze.bfg.settings`` API document as well.

Bug Fixes
---------
